@@ -35,7 +35,7 @@ unsigned data, data2;
 void specific_kernel(void *descr[], void *arg)
 {
 	(void)arg;
-	STARPU_ASSERT(starpu_task_get_current_data_node(0) == STARPU_MAIN_RAM);
+	STARPU_ASSERT(starpu_node_get_kind(starpu_task_get_current_data_node(0)) == STARPU_CPU_RAM);
 	unsigned *dataptr = (unsigned*) STARPU_VARIABLE_GET_PTR(descr[0]);
 
 	STARPU_ASSERT(dataptr == &data);
@@ -50,7 +50,7 @@ static struct starpu_codelet specific_cl =
 	.nbuffers = 2,
 	.modes = {STARPU_RW, STARPU_RW},
 	.specific_nodes = 1,
-	.nodes = {STARPU_MAIN_RAM, -1},
+	.nodes = {STARPU_SPECIFIC_NODE_CPU, STARPU_SPECIFIC_NODE_LOCAL},
 };
 
 void cpu_codelet_unsigned_inc(void *descr[], void *arg)
